2007-05-04  Dustin J. Mitchell <dustin@zmanda.com>
	* autogen man/Makefile.am configure.in config/acinclude.m4i
	  config/docbook-xslt-min.m4i config/docbook-dtd.m4i config/docbook-xslt.m4i
	  config/xsltproc.m4i Makefile.am: detect xsltproc, docbook xslt, and docbook
	  dtd versions better, to ensure proper creation of manpages.

2007-05-04  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amindexd.c common-src/sockaddr-util.c common-src/sockaddr-util.h
	  common-src/util.c common-src/security-util.c common-src/amanda.h
	  common-src/dgram.c common-src/stream.c common-src/Makefile.am: add new
	  sockaddr-util.[ch] containing sockaddr-related functions.

2007-05-04  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.3alpha)

2007-05-03  Jean-Louis Martineau <martineau@zmanda.com>
	* docs/*.txt: Update from xml-docs.

2007-05-03  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amrecover.8.xml: Fix space.

2007-05-03  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.2 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.2).

2007-05-02  Jean-Louis Martineau <martineau@zmanda.com>
	* docs/*.txt, man/xml-source/*.xml: Change OVERWRITE bu OVERRIDE.
	* man/xml-source/amadmin.8.xml: Add notees on no-reuse command.

2007-05-02  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Improve 'invalid service' message.

2007-05-01  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Report the error message.
	* recover-src/extract_list.c: Don't call close_connection.
	* common-src/security-util.c: (tcpm_close_connection): Check for rh->rc

2007-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (tcp1_stream_client): Set rh->rc->driver.

2007-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c, common-src/bsdudp-security.c,
	  common-src/krb4-security.c: Fix ntohs for port number.